## Process this file with automake to produce Makefile.in.

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/lib -I$(top_srcdir)/lib/libcore

noinst_LIBRARIES = librouting.a

librouting_a_SOURCES = \
	algorithms.c dijkstra.c lfi.c mara-mc-mmmf.c reverse-dijkstra.c \
	mara-spe.c

noinst_HEADERS = \
	algorithms.h dijkstra.h lfi.h mara-mc-mmmf.h reverse-dijkstra.h \
	mara-spe.h

